feat: add ticker and order-table components

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,14 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.ticker {
+  padding : 20px; 
+  border: 2px solid #ececec;
+  border-radius: 8px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.ticker__wrapper {
+  width: 50%;
+  margin: 20px 0;
+}
+
+.border-right {
+  border-right: 2px solid #ececec
 }
